# code

./: .gitignore  README.md  build_tazar_web.sh  dandd.c  steve.h  tazar.c
.github/workflows/: ci.yml  tazar_build.yml  test.yml
cmake/: CMakeLists.txt
lab/: README.md  bigints.c  simd.c  simd_single_file_gcc_clang.c
lab/wasm/: index.html  module.js  wasm_test.c  wasm_test.js
tazar/: index.html  tazar.h  tazar.js  tazar_ai.c  tazar_cli.c  tazar_game.c  tazar_main.c  tazar_parse.c  tazar_test.c  tazar_ui.c  tazar_wasm.c
tazar-v1/: .clang-format  shell.html  tazar.h  tazar_ai.c  tazar_game.c  tazar_ui.c
